--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "flatpickr": "^4.6.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.5",
